Task1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: reactapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
